新增 动态数字组件

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,6 +35,9 @@ $mainBackgroundColor: #304156;
     display: flex;
     flex-direction: row-reverse;
 }
+.text-center{
+    text-align: center;
+}
 .cursor-pointer{
     cursor: pointer;
 }
